[gd_scene load_steps=15 format=3 uid="uid://dn526eij58wfs"]

[ext_resource type="Script" uid="uid://b4itlodcpju0d" path="res://scenes/XRRoot.gd" id="1_t4l57"]
[ext_resource type="PackedScene" uid="uid://b5x50p37g7pwi" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="1_v48yd"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="4_6uron"]
[ext_resource type="Material" uid="uid://b20jn7y6kh1ct" path="res://assets/textures/player_ghost.tres" id="4_jb2jl"]
[ext_resource type="Script" uid="uid://oar6baydvvcw" path="res://addons/godot-xr-tools/player/player_body.gd" id="4_l0d4h"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="5_wqppd"]
[ext_resource type="Script" uid="uid://cuc3dte1tudr3" path="res://addons/godot-xr-tools/functions/movement_turn.gd" id="6_80eyh"]
[ext_resource type="Script" uid="uid://c2h24475ry32h" path="res://addons/godot-xr-tools/functions/movement_direct.gd" id="6_mvrkt"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="7_4wwnr"]
[ext_resource type="PackedScene" uid="uid://df81b1yyaj2" path="res://scenes/FunctionTeleportOverride.tscn" id="7_q0d1l"]
[ext_resource type="PackedScene" uid="uid://bhue34utfsw0r" path="res://scenes/menu/XRMenu.tscn" id="10_g5s6k"]
[ext_resource type="PackedScene" uid="uid://dxfoujgkv1e2y" path="res://scenes/FootstepPlayer.tscn" id="12_drak2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ne1gf"]
shading_mode = 0
albedo_color = Color(0.46, 0.946, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_roh25"]
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[node name="XrRoot" type="Node3D"]
script = ExtResource("1_t4l57")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]

[node name="VRCommonShaderCache" parent="XROrigin3D/XRCamera3D" instance=ExtResource("1_v48yd")]

[node name="XRController3D_left" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"

[node name="XRToolsMovementDirect" type="Node" parent="XROrigin3D/XRController3D_left" groups=["movement_providers"]]
script = ExtResource("6_mvrkt")
max_speed = 5.0
strafe = true
enabled = false

[node name="LeftHand" parent="XROrigin3D/XRController3D_left" instance=ExtResource("4_6uron")]
hand_material_override = ExtResource("4_jb2jl")

[node name="FunctionPointer" parent="XROrigin3D/XRController3D_left" instance=ExtResource("7_4wwnr")]
distance = 5.0
show_laser = 2
laser_length = 1
laser_material = SubResource("StandardMaterial3D_ne1gf")

[node name="FunctionTeleport" parent="XROrigin3D/XRController3D_left" instance=ExtResource("7_q0d1l")]
can_teleport_color = Color(1, 1, 1, 1)
cant_teleport_color = Color(0.572989, 0.572988, 0.572988, 1)
no_collision_color = Color(0.572549, 0.572549, 0.572549, 1)
strength = 10.0
max_slope = 80.0
collision_mask = 1
valid_teleport_mask = 4294901761
player_material = SubResource("StandardMaterial3D_roh25")
player_material = SubResource("StandardMaterial3D_roh25")

[node name="XRController3D_right" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"

[node name="RightHand" parent="XROrigin3D/XRController3D_right" instance=ExtResource("5_wqppd")]
hand_material_override = ExtResource("4_jb2jl")

[node name="XRToolsMovementTurn" type="Node" parent="XROrigin3D/XRController3D_right" groups=["movement_providers"]]
script = ExtResource("6_80eyh")
turn_mode = 1
step_turn_angle = 40.0

[node name="XrMenu" parent="XROrigin3D/XRController3D_right" instance=ExtResource("10_g5s6k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.06897)
visible = false

[node name="XRToolsPlayerBody" type="CharacterBody3D" parent="XROrigin3D" groups=["Player"]]
top_level = true
collision_layer = 524288
script = ExtResource("4_l0d4h")

[node name="FootstepPlayer" parent="XROrigin3D/XRToolsPlayerBody" instance=ExtResource("12_drak2")]

[node name="FailedVrAccept" type="AcceptDialog" parent="."]
process_mode = 3
initial_position = 2
dialog_text = "Failed to initialize OpenXR!

Make sure you have a VR headet plugged in and an OpenXR provider configured.

If you didn't mean to use VR, download a non-OpenXR version of the Musem of All Things."
dialog_close_on_escape = false

[connection signal="confirmed" from="FailedVrAccept" to="." method="_failed_vr_accept_confirmed"]
